# epc_functions

./: .gitignore  LICENSE  README.md  epc_domestic_certificates-schema-metadata.json  epc_domestic_recommendations-schema-metadata.json  epc_tables-metadata.json  pyproject.toml  setup.cfg
epc_functions/: __init__.py  epc_functions.py  epc_tables-metadata.json
tests/: epc_tables-metadata.json  epc_test.sqlite  test.csv  test_epc_functions.py
tests/all-domestic-certificates/domestic-E07000130-Charnwood/: certificates.csv  readme.txt  recommendations.csv
