[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[project]
name = "epc_functions"
version = "0.0.0"
authors = [
  { name="Steven Firth", email="s.k.firth@lboro.ac.uk" },
]
description = "Python package for working with the Energy Performance Certificates dataset from Open Data Communities"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "csvw_functions_extra>=0.0.0",
]

[project.urls]
Homepage = "https://github.com/building-energy/epc_functions"
Issues = "https://github.com/building-energy/epc_functions/issues"

[tool.setuptools.package-data]
myModule = ["*.json"]