[metadata]
name = epc_functions
version = 0.0.0
author = Steven Firth
author_email = s.k.firth@lboro.ac.uk
description = Python package for working with the Energy Performance Certificates dataset from Open Data Communities
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/building-energy/epc_functions
project_urls =
    Source = https://github.com/building-energy/epc_functions/epc_functions
    Bug Tracker = https://github.com/building-energy/epc_functions/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
package_dir =
    = epc_functions
python_requires = >=3.6


[options.package_data]
epc_functions =
    *.json

